[build-system]
requires = ["setuptools>=64.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "uptake"
description = "Measuring Conversational Uptake: A Case Study on Student-Teacher Interactions by Demszky et al"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
dependencies = [
]
dynamic = [
  "version",
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
license = { text = "Apache-2.0" }

[project.optional-dependencies]
dev = [
    'pytest',
]

[project.urls]
Homepage = "https://github.com/theyorubayesian/conversational-uptake"

[project.scripts]
uptake = "uptake.cli:main"